Created sample seeds. Server and seeding works like a dream

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <main class="login">
 
   <section class="login-scroll">
-  <div class="mr marquee">
+  <div class="frame">
     <div class="login-track">
       <p>Login</p>
     </div>
