--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
 
 
 <section class="signup-scroll">
-  <div class="mr marquee">
+  <div class="frame">
     <div class="signup-track">
       <p>Sign Up</p>
     </div>
@@ -10,7 +10,7 @@
 </section>
 
 <section class="signup-block">
-  <img class="hello-there graphic" src="">
+  <img class="hello graphic" src="">
   {{!-- Signup Form --}}
   <form class="form signup-form">
     {{!-- Ask for username --}}
