Login and signup handlebars updated

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <div class="user-dashboard">
-    <h1 class="dashboard-title">Welcome to your Dashboard</h1>
+    <h1 class="dashboard-title">Dashboard</h1>
     <div class="split-row">
         <div class="half-col">
             
