--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,29 +3,29 @@
   <section class="login-scroll">
   <div class="frame">
     <div class="login-track">
-      <p>Login</p>
+      <h1>Login</h1>
     </div>
   </div>
 </section>
 
   <div class="login-block">
     <img class="Hello There!" src="">
-    {{!-- Login Form --}}
+    {{!-- login form --}}
     <form class="form login-form">
       <div class="form-group">
-        {{!-- Ask for username --}}
+        {{!-- username requirement --}}
         <label for="username-login">Username:</label>
         <br>
         <input class="form-input" type="text" id="username-login" placeholder="username"/>
       </div>
       <div class="form-group">
-        {{!-- Ask for user password --}}
+        {{!-- password requirement--}}
         <label for="password-login">Password:</label>
         <br>
         <input class="form-input" type="password" id="password-login" placeholder="password"/>
       </div>
       <div class="form-group">
-        {{!-- Login button --}}
+        {{!-- login button --}}
         <button class="btn login-button" type="submit">Log In</button>
       </div>
       <div class="form-group">
