--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,28 +4,28 @@
 <section class="signup-scroll">
   <div class="frame">
     <div class="signup-track">
-      <p>Sign Up</p>
+      <h1>Sign Up</h1>
     </div>
   </div>
 </section>
 
 <section class="signup-block">
   <img class="hello graphic" src="">
-  {{!-- Signup Form --}}
+  {{!-- signup form --}}
   <form class="form signup-form">
-    {{!-- Ask for username --}}
+    {{!-- username requirement --}}
     <div class="form-group">
       <label class="label" for="username-signup">Create Username:</label>
       <br>
       <input class="form-input" type="text" id="username-signup" placeholder="username"/>
       </div>
-      {{!-- Ask for user password --}}
+      {{!-- password requirement --}}
     <div class="form-group">
       <label class="label" for="password-signup">Create Password:</label>
       <br>
       <input class="form-input" type="password" id="password-signup" placeholder="password"/>
     </div>
-    {{!-- Signup button --}}
+    {{!-- signup button --}}
     <div class="form-group">
       <button class="btn signup-button" type="submit">Sign Up</button>
     </div>
